umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_sulfanilamide.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 19
bond_count: 19
sum_formula: C6H8N2O2S
graph6: RiCGGCACI?@?@??O?G?@??C??G??O?
