umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_rdkit_zinc6624278.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 25
bond_count: 28
sum_formula: C20NO4+1
graph6: XhCGGC@?OOg@@???_?G?@??C??G??G?@C?A@??O????_??@???A
