umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_extended_molecule_scifinder_Substance_20250901_1134.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 24
bond_count: 25
sum_formula: C14N2O8
graph6: WoCO?CA???_A??_?a?O?A??G??W?C?C?C?OA???O??@???B
