umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_07186584_5230_4092_9fb3_d2af6e398704.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 107
bond_count: 108
sum_formula: C40H60N2NiS4+2
graph6: ~?@js_?GC@?IG_??@??_?G?@G@C?????G??C??@???G_?G_??????@????_???G???@A??@C?????????G????C????C?????G????G?????@????@???????_???????????@??????C??????_??????G?????@???????@??????G????????__???????_???????O???????C????????_???????@????????A????????A????????@?????????O????????@?????????C?????????G?????????G?????????C??????????_?????????C??????????O??????????_??????????_??????????C??????????A???????????O??????????A???????????G???????????G???????????G???????????A????????????_???????????C????????????G????????????O????????????G????????????C????????????@?????????????C?????????????O?????????????O?????????????O?????????????G??????????????_?????????????C??????????????G??????????????O??????????????O??????????????C??????????????@???????????????C???????????????O???????????????_???????????????O???????????????G???????????????@????????????????G????????????????_????????????????_????????????????_????????????????G????????????????A?????????????????O??????????
