umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__store_summary_snapshot@parse_mol_indigo_1032-quadra.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: summary
---
atom_count: 48
bond_count: 48
sum_formula: C48
graph6: ohEG?C@?G?_P????_?G?@??C?AG?????C??@???G???_??PC???????_G??????@???_?????G??O??????C??????????G????@?????B????????????_?????O?????B?????????????G??????O??????K??????????????G??????@???????B
